# clag

./: .gitignore  README.md  agentTemplate.py.jinja  dsl.py  out.py  pyproject.toml
clag/: dsl.py
examples/: coffee.agent  coffee.maspy
examples/maspy-examples/: coffee.py
grammar/: agent.tx  env.tx
ic/: __init__.py  agent.py  cli.py  dsl.py
ic/grammar/: agent.tx  env.tx  system.tx
ic/templates/: agentTemplate.py.jinja  envTemplate.py.jinja
ic/tests/: build.test.py
templates/: agentTemplate.py.jinja  envTemplate.py.jinja
