[tool.poetry]
name = "ic"
version = "0.1.0"
description = ""
authors = ["ctravizanutto <ctravizanutto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
maspy-ml = "^0.2.2"
textx = "^4.0.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ic = "ic.dsl:main"