[tool.poetry]
name = "ic"
version = "0.2.0"
description = ""
authors = ["Cainan Travizanutto <ctravizanutto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
maspy-ml = "^0.2.2"
textx = "^4.0.1"
jinja2 = "^3.1.4"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ic = "ic.cli:cli"